--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul class="navigation">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
-                <li><a href="#">FIND A STORE</a></li>
+                <li><a href="#">FIND STORE</a></li>
                 <li><a href="#">CONTACT</a></li>
                 <li><a id="cart" href="#">CART<i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
